# develop-agent-revenge

./: .gitignore  README.md  pyproject.toml
assignment1/: README.md  REAME.md  agent.py  main.py  prompt.py
assignment1/tools/: websurfer.py
assignment2/: README.md  agent.py  prompt.py
assignment2/tools/: __init__.py  code_appender.py  code_reader.py  code_writer.py  terminal.py
