[tool.poetry]
name = "develop-agent-revenge"
version = "0.1.0"
description = ""
authors = ["Sangmin Hwang <hwsmin920@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.13.3"
python-dotenv = "^1.0.1"
tavily-python = "^0.3.1"

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
follow_imports = "silent"

[tool.ruff]
# ref: https://beta.ruff.rs/docs/rules/
select = ["E", "F", "UP", "B", "Q"]
ignore = ["UP012", "E722", "E741", "E501", "B007", "UP015"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
